# blgmd

./: blgmd.cpp  extrender.cpp  extrender.h  istft.md  md4c-html.c  meson.build
itex-src/: .Makefile.swp  itex2MML.h  itex2MML_ruby.c.orig  lex.l  meson.build  y
itex-src/perl/: Makefile.old
